--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,8 @@ nav a:hover{
     padding: 20px 150px;
     width: 100%;
     height: 100vh;
+    background-color: #000;
+
 }
 .image-part{
     width: 50%;
@@ -198,6 +200,7 @@ nav a:hover{
     background: var(--main-color);
     border-radius: 65px 50px 50% 138px;
     overflow: hidden;
+    box-shadow: -10px -10px 0 #fff;
 }
 .image-part .ctn-img img{
     width: 70%;
@@ -207,19 +210,19 @@ nav a:hover{
 .about-content{
     width: 50%;
     height: 85%;
-    border: 1px solid black;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 20px;
-    box-shadow: 10px 10px 0 black;
+    box-shadow: 10px 10px 0 rgb(255, 255, 255);
     padding: 20px;
 }
 .about-content .title{
     font-size:25px ;
     margin-bottom: 10px;
     font-weight: 600;
-    color: var(--main-color);
+    color: white;
 }
 .about-content p{
-    color: var(--text-color);
+    color: white;
     line-height: 2;
     font-size: 17px;
 }
@@ -227,10 +230,10 @@ nav a:hover{
 
 /* ///////////////////////////////////// */
 /* Start Projects Page */
-.projects-page{
+#projects-page{
     padding: 20px 150px;
 }
-.projects-page .title{
+#projects-page .title{
     text-align: center;
     margin-bottom: 50px;
     font-size: 25px;
@@ -248,6 +251,7 @@ nav a:hover{
     padding: 10px;
     border: 1px solid var(--main-color);
     border-radius: 20px;
+    box-shadow: 10px 10px 0 var(--main-color);
 }
 .project .ctn-img{
     width: 100%;
@@ -276,6 +280,40 @@ nav a:hover{
 
 }
 /* End Projects Page */
+/* ///////////////////////////////////// */
+/* Start Contact Page */
+#contact-page{
+    padding: 20px 150px;
+    background-color: white;
+    text-align: center;
+}
+.ctn-form{
+    border: 1px solid var(--main-color);
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 10px 10px 0 var(--main-color);
+}
+.ctn-form .title{
+    font-size: 24px;
+}
+.ctn-form form{
+    margin-top: 30px;
+}
+.ctn-form form input,textarea,button{
+    min-width: 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+    border: 1px solid var(--main-color);
+    background-color: #fff;
+    color: var(--text-color);
+    padding:10px;
+    font-size: 16px;
+}
+.ctn-form button{
+    background-color: var(--main-color);
+    color:white;
+}
+/* End Contact Page */
 /* ///////////////////////////////////// */
 /* Start Media Queries */
 @media (max-width: 768px){
@@ -368,14 +406,17 @@ nav a:hover{
     #about-page{
         flex-direction: column;
         padding: 20px;
+        height: initial;
     }
     .image-part {
         width: 100%;
         height: 45%;
         margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
     }
     .image-part .ctn-img {
-        width: 100%;
+        width: 70%;
         height: 100%;
     }
     .image-part .ctn-img img {
@@ -394,13 +435,18 @@ nav a:hover{
     }
     /* End About */
     /* Start Project */
-    .projects-page{
+    #projects-page{
         padding: 20px;
     }
     .project {
         width: 100%;
     }
     /* End Project */
+    /* Start Contact */
+    #contact-page{
+        padding: 20px;
+    }
+    /* End Contact */
 }
 /* End Media Queries */
 /* ///////////////////////////////////// */
